--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,10 @@
 // Specific CSS for your home-page
+
+body {
+  background-color: rgb(5, 0, 52);
+  color: rgb(230, 230, 230)
+}
+
+a {
+  color: white;
+}
