--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container my-3">
+  <h1>Welcome, User</h1>
+  <p>Find me in app/views/pages/home.html.erb</p>
+
+</div>
