--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,20 @@
-<div class="container my-3">
-  <h1>Welcome, User</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+<div class="container my-5">
+  <% if user_signed_in? %>
+    <h3>Welcome, <%= current_user.username %></h3>
+  <% else %>
+    <h3>Welcome, Guest</h3>
+  <% end %>
+  <hr>
+  <h1>Latest Products</h1>
+  <div class="products-grid my-4">
+    <% @products.each do |product| %>
+      <div class="product-card">
+        <%= image_tag "https://images.unsplash.com/photo-1457573399415-1154bfe3ff71?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", alt: "Buds" %>
+        <div class="product-infos">
+          <p><%= product.name %></p>
+        </div>
+      </div>
+    <% end %>
+  </div>
 
 </div>
