implemented login splash screen, made index page inaccessible unless logged in

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,15 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// General rules throughout the application
+
+body {
+  background-color: rgb(0, 0, 0);
+  color: rgb(230, 230, 230)
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
