--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,14 @@
 // Specific CSS for your home-page
 
-body {
-  background-color: rgb(0, 0, 0);
-  color: rgb(230, 230, 230)
+.homepage-container {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
 }
 
-a {
-  color: white;
+.home-logo {
+  width: 70%;
 }
