--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,6 @@
   <body class="pb-5">
     <%= render "shared/flashes" %>
     <%= yield %>
-    <%= render "shared/navbar" %>
+    <%= render 'shared/navbar' unless current_page?(root_path) && !user_signed_in? %>
   </body>
 </html>
