--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,18 @@
 <div class="container my-5">
-  <h1><%= @product.name %></h1>
-  <% @product.photos.each do |photo| %>
-    <%= cl_image_tag photo.key, height: 300, width: 300, crop: :fill %>
+  <%= link_to products_path do %>
+    <i class="fas fa-arrow-left"></i>
   <% end %>
+  <h1><%= @product.name %></h1>
+  <% if @product.photos.size == 0 %>
+    <%= image_tag "https://images.unsplash.com/photo-1457573399415-1154bfe3ff71?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", alt: "Buds", height: 300, width: 300, crop: :fill%>
+  <% else %>
+    <% @product.photos.each do |photo| %>
+      <%= cl_image_tag photo.key, height: 300, width: 300, crop: :fill %>
+    <% end %>
+  <% end %>
+  <p><%= @product.description %></p>
+  <p><strong>Price:</strong> R<%= @product.price %>/gram</p>
+  <%= link_to "Edit", edit_product_path(@product), class: "btn btn-success" %>
+  <%= link_to "Delete", product_path(@product), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
+  <%# toggle  %>
 </div>
