--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,18 +1,27 @@
 <div class="container my-5">
-  <%= link_to products_path do %>
-    <i class="fas fa-arrow-left"></i>
-  <% end %>
-  <h1><%= @product.name %></h1>
+  <div class="d-flex align-items-center mb-2">
+    <%= link_to products_path do %>
+      <i class="fas fa-arrow-left me-2"></i>
+    <% end %>
+    <h1 class="m-0"><%= @product.name %></h1>
+  </div>
   <% if @product.photos.size == 0 %>
-    <%= image_tag "https://images.unsplash.com/photo-1457573399415-1154bfe3ff71?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", alt: "Buds", height: 300, width: 300, crop: :fill%>
+    <%= image_tag "https://images.unsplash.com/photo-1457573399415-1154bfe3ff71?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", alt: "Buds", class: "product-show mb-3"%>
   <% else %>
     <% @product.photos.each do |photo| %>
-      <%= cl_image_tag photo.key, height: 300, width: 300, crop: :fill %>
+      <%= cl_image_tag photo.key, class: "product-show mb-3" %>
     <% end %>
   <% end %>
-  <p><%= @product.description %></p>
+  <div class="product-description" data-controller="toggle">
+    <p data-action="click->toggle#toggle" data-toggle-target="button" class="text-success">Show Description</p>
+    <p data-toggle-target="content" class="hidden"><%= @product.description %></p>
+  </div>
   <p><strong>Price:</strong> R<%= @product.price %>/gram</p>
-  <%= link_to "Edit", edit_product_path(@product), class: "btn btn-success" %>
-  <%= link_to "Delete", product_path(@product), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
+  <% if current_user.role == "admin" %>
+    <%= link_to "Edit", edit_product_path(@product), class: "btn btn-success" %>
+    <%= link_to "Delete", product_path(@product), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
+  <% else %>
+    <%= button_to 'Add to Cart', add_to_cart_product_path(@product), method: :post, class: "btn btn-success" %>
+  <% end %>
   <%# toggle  %>
 </div>
