rounded prices, button colors, links to cart

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
   <div class="homepage-container">
     <%= image_tag "goldcloud_logo.png", class: "home-logo" %>
     <div>
-      <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
-      <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-secondary' %>
+      <%= link_to 'Login', new_user_session_path, class: 'btn btn-success' %>
+      <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-info' %>
     </div>
   </div>
 </div>
