updated navbar, added boostrap carousel to product show page. Fixed availability bug on product update

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :description %>
     <%= f.input :price %>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <%= f.input :available, as: :hidden, input_html: { value: false } %>
     <%= f.input :available, inline_label: 'Available?' %>
     <%= f.submit "Confirm Changes" %>
   <% end %>
