--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,37 +1,56 @@
-<div class="navbar navbar-expand-sm fixed-bottom bg-black border-top" data-bs-theme="dark">
+<div class="navbar navbar-expand fixed-bottom bg-black border-top" data-bs-theme="dark">
   <div class="container-fluid">
     <%= link_to products_path, class: "navbar-brand" do %>
       <%= image_tag "goldcloud_logo.png", style: "width: 60px;" %>
     <% end %>
-
-
-    <%# boostrap toggler menu buttons for mobile %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Cart", cart_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item dropup">
-            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag "pineapple.jpg", class: "avatar", alt: "dropdown menu" %>
-            </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Cart", cart_path, class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "btn btn-warning" %>
-            <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-warning" %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
+    <ul class="navbar-nav ms-auto">
+      <!-- <li class="nav-item"> -->
+        <%# = link_to "Cart", cart_path, class: "nav-link" %>
+      <!-- </li> -->
+      <li class="nav-item dropup">
+        <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= image_tag "user_profile.jpg", class: "avatar", alt: "dropdown menu" %>
+        </a>
+        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <%= link_to "Cart", cart_path, class: "dropdown-item" %>
+          <%= link_to "Account", root_path, class: "dropdown-item" %>
+          <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
+
+
+
+<!-- <div class="navbar navbar-expand fixed-bottom bg-black border-top" data-bs-theme="dark"> -->
+  <!-- <div class="container-fluid d-flex justify-content-between"> -->
+    <%# = link_to products_path, class: "navbar-brand" do %>
+      <%# = image_tag "goldcloud_logo.png", style: "width: 60px;" %>
+    <%#  end %>
+<!--  -->
+    <%# boostrap toggler menu buttons for mobile %>
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" -->
+            <!-- data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" -->
+            <!-- aria-expanded="false" aria-label="Toggle navigation"> -->
+      <!-- <span class="navbar-toggler-icon"></span> -->
+    <!-- </button> -->
+<!--  -->
+    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+      <!-- <ul class="navbar-nav me-auto"> -->
+        <!-- <li class="nav-item"> -->
+          <%# = link_to "Cart", cart_path, class: "nav-link" %>
+        <!-- </li> -->
+        <!-- <li class="nav-item dropup"> -->
+          <!-- <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> -->
+            <%# = image_tag "user_profile.jpg", class: "avatar", alt: "dropdown menu" %>
+          <!-- </a> -->
+          <!-- <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown"> -->
+            <%# = link_to "Cart", cart_path, class: "dropdown-item" %>
+            <%# = link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+          <!-- </div> -->
+        <!-- </li> -->
+      <!-- </ul> -->
+    <!-- </div> -->
+  <!-- </div> -->
+<!-- </div> -->
