fixed bug that deletes all photos when changing availability

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -33,8 +33,9 @@
 .cart-product-card {
   display: flex;
   justify-content: space-between;
-  height: 70px;
-  border-bottom: 1px solid #7c7c7c;
+  height: 100px;
+  border-bottom: 1px solid #7c7c7c7d;
+
   align-items: center;
 
   p {
