--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,11 @@
 <div class="container my-5">
-  <h1 class="text-center">Edit Product</h1>
+
+    <div class="d-flex align-items-center mb-2">
+    <%= link_to products_path do %>
+      <i class="fas fa-arrow-left me-2"></i>
+    <% end %>
+    <h1 class="m-0"><%= @product.name %></h1>
+  </div>
   <%= simple_form_for @product do |f| %>
     <%= f.input :name, required: false %>
     <%= f.input :description %>
@@ -9,6 +15,7 @@
       <% if @product.photos.attached? %>
         <% @product.photos.each do |photo| %>
           <%= cl_image_tag photo.key, height: 100, width: 100, crop: :fill %>
+          <%= f.hidden_field :photos, multiple: true, value: photo.signed_id %>
         <% end %>
       <% else %>
         <p>No photos currently.</p>
