update navbar style and layout, index header, add link to cart in notice, add account route and view, add product delete action from show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,6 @@
   <body class="pb-5">
     <%= render "shared/flashes" %>
     <%= yield %>
-    <%= render 'shared/navbar' unless current_page?(root_path) && !user_signed_in? %>
+    <%= render 'shared/navbar' unless !user_signed_in? %>
   </body>
 </html>
