--- a/app/views/pages/cart.html.erb
+++ b/app/views/pages/cart.html.erb
@@ -10,8 +10,10 @@
 
   <div class="cart-products">
     <% if @order.nil? || @order.order_items.empty? %>
-      <p>Your cart is empty :( </p>
-      <%= link_to 'Browse Products', products_path, class: 'btn btn-success' %>
+      <div class="mt-3">
+        <p>Your cart is empty :( </p>
+        <%= link_to 'Browse Products', products_path, class: 'btn btn-success' %>
+      </div>
     <% else %>
       <% @order.order_items.each do |order_item| %>
         <div class="cart-product-card pe-3"
@@ -44,7 +46,7 @@
 
   <div class="cart-total-confirm d-flex align-items-center justify-content-between border-top">
     <p class="fs-4 m-0" data-cart-target="total">Total <strong>R<%= @order.total_price.round %></strong></p>
-    <button class="btn btn-success btn-lg">Confirm order</button>
+    <button class="btn btn-success btn-lg">Checkout</button>
   </div>
 
 </div>
