--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,31 @@
-<div class="container my-5">
-  <% if user_signed_in? %>
-    <h4>Welcome, <%= current_user.username %></h4>
-    <% if current_user.role == "admin" %>
-      <p>You have admin privileges:</p>
-      <%= link_to "Add a new product", new_product_path, class: "btn btn-success" %>
-      <%= link_to "See orders", products_path, class: "btn btn-info" %>
+<div class="header">
+  <div class="container d-flex align-items-center mt-3">
+    <% if user_signed_in? %>
+      <h4>Welcome, <%= current_user.username %></h4>
+    <% else %>
+      <h3>Welcome, Guest</h3>
     <% end %>
-  <% else %>
-    <h3>Welcome, Guest</h3>
-  <% end %>
-  <hr>
-  <h1>Latest Products</h1>
-  <div class="products-grid my-4">
-    <% @products.each do |product| %>
-      <%= link_to product_path(product) do %>
-        <div class="product-card">
-          <% if product.photos.size == 0 %>
-            <%= image_tag "https://images.unsplash.com/photo-1457573399415-1154bfe3ff71?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", alt: "Buds" %>
-          <% else %>
-            <%= cl_image_tag product.photos.first.key, alt: product.name %>
-          <% end %>
-          <div class="product-infos">
-            <p><%= product.name %></p>
-            <p id="product-price">R<%= product.price.round %>/g</p>
+  </div>
+</div>
+<div class="container mb-navbar mt-header">
+  <div class="">
+    <h1>Latest Products</h1>
+    <div class="products-grid my-4">
+      <% @products.each do |product| %>
+        <%= link_to product_path(product) do %>
+          <div class="product-card">
+            <% if product.photos.size == 0 %>
+              <%= image_tag "https://images.unsplash.com/photo-1457573399415-1154bfe3ff71?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", alt: "Buds" %>
+            <% else %>
+              <%= cl_image_tag product.photos.first.key, alt: product.name %>
+            <% end %>
+            <div class="product-infos">
+              <p><%= product.name %></p>
+              <p id="product-price">R<%= product.price.round %>/g</p>
+            </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
