--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,7 +45,7 @@
       <p class="text-info">This product is currently not available</p>
     <% end %>
   </div>
-  <p><strong>Price:</strong> R<%= @product.price %>/gram</p>
+  <p><strong>Price:</strong> R<%= @product.price.round %>/gram</p>
   <% if current_user.role == "admin" %>
     <%= link_to "Edit", edit_product_path(@product), class: "btn btn-success" %>
     <%= link_to "Delete", product_path(@product), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
