--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
-<div class="container my-5">
-  <div class="d-flex align-items-center mb-2">
+<div class="container mb-navbar mt-5">
+  <div class="d-flex align-items-center mb-3">
     <%= link_to products_path do %>
       <i class="fas fa-arrow-left me-2"></i>
     <% end %>
