--- a/app/views/pages/cart.html.erb
+++ b/app/views/pages/cart.html.erb
@@ -2,7 +2,7 @@
       data-controller="cart"
       data-action="cart-item:sendNewTotal@window->cart#updateTotal">
   <div class="d-flex align-items-center border-bottom pb-3">
-    <%= link_to :back do %>
+    <%= link_to products_path do %>
       <i class="fas fa-arrow-left me-2"></i>
     <% end %>
     <h1 class="m-0">Your Cart</h1>
@@ -11,7 +11,7 @@
   <div class="cart-products">
     <% if @order.nil? || @order.order_items.empty? %>
       <div class="mt-3">
-        <p>Your cart is empty :( </p>
+        <p>Your cart is empty</p>
         <%= link_to 'Browse Products', products_path, class: 'btn btn-success' %>
       </div>
     <% else %>
@@ -47,10 +47,12 @@
     <% end %>
   </div>
 
-  <div class="cart-total-confirm d-flex align-items-center justify-content-between border-top">
-    <p class="fs-4 m-0" data-cart-target="total">Total <strong>R<%= @order.total_price.round %></strong></p>
-    <!-- <button class="btn btn-success btn-lg">Checkout</button> -->
-    <%= link_to "Checkout", checkout_path, class: "btn btn-success btn-lg" %>
-  </div>
+  <% unless @order.nil? || @order.order_items.empty? %>
+    <div class="cart-total-confirm d-flex align-items-center justify-content-between border-top">
+      <p class="fs-4 m-0" data-cart-target="total">Total <strong>R<%= @order.total_price.round %></strong></p>
+      <!-- <button class="btn btn-success btn-lg">Checkout</button> -->
+      <%= link_to "Checkout", checkout_path, class: "btn btn-success btn-lg" %>
+    </div>
+  <% end %>
 
 </div>
