--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
     <% end %>
     <div class="navbar-nav ms-auto f-flex align-items-center justify-content-between">
       <% if current_user.role == "admin" %>
-          <%= link_to "+ product", new_product_path, class: "btn btn-success me-2"%>
+          <%= link_to "+ Product", new_product_path, class: "btn btn-success me-2"%>
           <%= link_to "Orders", orders_path, class: "btn btn-info me-3"%>
       <% else %>
         <%= link_to cart_path, class: "nav-link me-3" do %>
