fix splashscreen redirect, add todo on checkout page, delete unused hello stimulus controller

--- a/app/views/pages/checkout.html.erb
+++ b/app/views/pages/checkout.html.erb
@@ -7,6 +7,8 @@
   </div>
   <div class="">
     <p>TO DO: add order items / summary here</p>
+    <p>input User delivery address</p>
+
     <p>Total <strong>R<%= @order.total_price.round %></strong></p>
     <%= link_to "Confirm Order", confirm_order_order_path(@order), class: "btn btn-success", method: :patch, data: { turbo_method: :patch } %>
   </div>
