--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand fixed-bottom bg-black border-top" data-bs-theme="dark">
   <div class="container-fluid">
-    <%= link_to products_path, class: "navbar-brand" do %>
+    <%= link_to items_path, class: "navbar-brand" do %>
       <%= image_tag "goldcloud_logo.png", style: "width: 70px;" %>
     <% end %>
 
