Refactor: add to cart and remove from cart methods removed from items controller, moved to create and destroy methods in order_items controller. Other refactor and clean up across the app. Polymorphic item model implemented fully, better separation of concerns.

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -55,6 +55,6 @@
     <%= link_to "Delete", product_path(@item.itemable), class: "btn btn-danger",
                 data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
   <% else %>
-    <%= button_to 'Add to Cart', add_to_cart_item_path(@item), method: :post, class: "btn btn-success" %>
+    <%= button_to 'Add to Cart', order_items_path(item_id: @item.id), method: :post, class: "btn btn-success" %>
   <% end %>
 </div>
