Create partials for item show page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,9 +1,9 @@
-.product-card {
+.item-card {
   border-radius: 0.25rem;
   overflow: hidden;
   background-color: rgb(42, 42, 42);
 
-  .product-infos {
+  .item-infos {
     padding: 0.5rem;
 
     p {
