--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,60 +1,11 @@
 <div class="container mb-navbar mt-5">
-  <div class="d-flex align-items-center mb-3">
-    <%= link_to items_path do %>
-      <i class="fas fa-arrow-left me-2"></i>
-    <% end %>
-    <h1 class="m-0"><%= @item.itemable.name %></h1>
-  </div>
+  <%= render 'header', item: @item %>
 
-  <% if @item.itemable.photos.attached? %>
-    <div id="itemCarousel" class="carousel slide">
-      <div class="carousel-indicators">
-        <% @item.itemable.photos.each_with_index do |photo, index| %>
-          <button type="button" data-bs-target="#itemCarousel" data-bs-slide-to="<%= index %>"
-                  class="<%= 'active' if index.zero? %>" aria-current="<%= index.zero? %>"
-                  aria-label="Slide <%= index + 1 %>">
-          </button>
-        <% end %>
-      </div>
-      <div class="carousel-inner">
-        <% @item.itemable.photos.each_with_index do |photo, index| %>
-          <div class="carousel-item <%= 'active' if index.zero? %>">
-            <%= cl_image_tag photo.key, class: "d-block w-100 product-show mb-3", alt: "#{@item.itemable.name} - Image #{index + 1}" %>
-          </div>
-        <% end %>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#itemCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#itemCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-  <% else %>
-    <%= image_tag @item.primary_photo_url, alt: @item.itemable.name, class: "product-show mb-3" %>
-  <% end %>
+  <%= render 'carousel', item: @item %>
 
-  <div class="product-description" data-controller="toggle">
-    <p data-action="click->toggle#toggle" data-toggle-target="button" class="text-success">Show Description</p>
-    <p data-toggle-target="content" class="hidden"><%= @item.itemable.description %></p>
-    <% if @item.itemable.available == false %>
-      <p class="text-info">This product is currently not available</p>
-    <% end %>
-  </div>
+  <%= render 'description', item: @item %>
 
-  <p>
-    <strong>Price:</strong>
-    R<%= @item.itemable.price.round %>
-    <%= @item.itemable_type == 'Product' ? '/gram' : '' %>
-  </p>
+  <%= render 'price', item: @item %>
 
-  <% if current_user&.role == "admin" %>
-    <%= link_to "Edit", edit_product_path(@item.itemable), class: "btn btn-success" %>
-    <%= link_to "Delete", product_path(@item.itemable), class: "btn btn-danger",
-                data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
-  <% else %>
-    <%= button_to 'Add to Cart', order_items_path(item_id: @item.id), method: :post, class: "btn btn-success" %>
-  <% end %>
+  <%= render 'actions', item: @item, current_user: current_user %>
 </div>
